--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "firebase-admin": "^5.12.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "puppeteer": "^1.14.0"
   }
 }
